Changelog
=========

1.0.2 (unreleased)
------------------

- Display the original source URL as a clickable link #3101 [deroiste]


1.0.1 (2011-03-01)
------------------

- Created recipe with ZopeSkel
  [""]